# musicbase

./: '  :w  notes.txt  package-lock.json  package.json  planning.md  todo.md
src/: App.tsx  ipc_commands.ts  ipc_types.ts  main.tsx  types.ts  utils.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  sample_data.db  tauri.conf.json  test.db
src-tauri/src/: audio_playback.rs  content_library.rs  content_scanner.rs  content_scanner_test.rs  database.rs  fs_utils.rs  images.rs  lib.rs  library.rs  main.rs  models.rs  models_test.rs  param.rs  test_utils.rs  utils.rs
src-tauri/src/models/: base_metadata.rs  user_generated.rs
src-tauri/test_audio/: sample3.flac  sample4.flac
src/components/: BulletButtons.tsx  Button.tsx  ContextMenu.tsx  FormModal.tsx  ImagePlaceholder.tsx  Loading.tsx  Modal.tsx  NamingModal.tsx  PlaylistSelectModal.tsx  SafeImage.tsx  SearchBar.tsx
src/components/left_panel/: Filters.tsx  GridView.tsx  LeftPanel.tsx  Library.tsx  ListView.tsx
src/components/main_view/: AlbumView.tsx  MainView.tsx  SettingsView.tsx
src/components/player/: FullScreenView.tsx  Player.tsx  ProgressBar.tsx
src/styles/: Poppins.css  album.css  context_menu.css  filters.css  full_screen_view.css  global.css  grid.css  left_panel.css  list.css  loading.css  main_view.css  modal.css  panels.css  player.css  playlist_select.css  search_bar.css  settings_view.css  widgets.css
