[package]
name = "musicbase"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-message", "dialog-open", "shell-open", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
walkdir = "2.5.0"
audiotags = "0.5.0"
sqlite = "0.36.0"
once_cell = "1.19.0"
num = "0.4.2"
rand = "0.8.5"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
image = "0.25.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
